<resources>
    <string name="app_name">Aerokrak mobile</string>

    <string name="welcome_text">Paraglider Shop</string>
    <string name="phone_nb">Phone number</string>
    <string name="password">Password</string>
    <string name="name">User Name</string>
    <string name="remember_me_checkbox">Remember Me</string>
    <string name="forget_password">Forgot password?</string>
    <string name="create_account">Register</string>
    <string name="have_an_account">Have an account? Log In</string>
    <string name="join_us">Create Account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home Page</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>

    <string name="cart">Cart</string>
    <string name="orders">My shopping cart</string>
    <string name="categories">Categories</string>
    <string name="settings">Your Profile</string>
    <string name="logout">Logout</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_seller_home">SellerHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="full_name">Full name and surname</string>
    <string name="profile_name">Profile Name</string>
    <string name="err_write_profile_name">Please write Your Profile Name</string>
    <string name="err_write_email">Please write Your E-Mail Address</string>
    <string name="err_write_password">Use 7 letters and at least one number</string>
</resources>
