<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_page_photo"
    tools:context=".buyer.MainActivity">
<LinearLayout
    android:id="@+id/linear_layout_main_page"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="5dp">
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="120dp"
        android:layout_height="135dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/company_icon" />

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="240dp"
        android:layout_height="120dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold|italic"/>
</LinearLayout>



    <Button
        android:id="@+id/main_join_now_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_login_btn"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:text="@string/join_us"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/main_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:layout_above="@+id/seller_begin"
        android:text="@string/have_an_account"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/seller_begin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="Wants to become a seller?"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        />









</RelativeLayout>